<resources>
    <string name="app_name">PopcornApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loading_data" translatable="true">Loading Data</string>
    <string name="button_refresh" translatable="true">Refresh</string>
    <string name="rating_label" translatable="true">Rating</string>
    <string name="release_date" translatable="true">Release Date</string>
    <string name="original_language" translatable="true">Original Language</string>
    <string name="trailers_label" translatable="true">Trailers</string>
    <string name="reviews_label" translatable="true">Reviews</string>
    <string name="no_internet" translatable="true">No internet connection found </string>
    <string name="popular_movies" translatable="true">Popular Movies</string>
    <string name="top_rated_movies" translatable="true">Top Rated Movies</string>
    <string name="now_playing_movies" translatable="true">Now Playing</string>
    <string name="upcoming_movies" translatable="true">Upcoming</string>
    <string name="favourite_movies" translatable="true">My Favourites</string>
    <string name="movie_details" translatable="false">Movie Details</string>
    <string name="poster_image">Poster Image</string>
    <string name="no_trailers">No trailers available</string>
    <string name="no_reviews">No reviews available</string>
    <string name="tmdb">Powered by The Movie Database</string>
    <string name="review_label"> Review %1$d of %2$d </string>
    <string name="poster_url">"http://image.tmdb.org/t/p/w500/%1$s"</string>
    <string name="thumbnail_url">https://img.youtube.com/vi/%1$s/hqdefault.jpg</string>
    <string name="video_url">https://www.youtube.com/watch?v=%1$s</string>
    <string name="video_error">Error playing video</string>
    <string name="rating">%1$s/10</string>
    <string name="title_activity_trailer">TrailerActivity</string>

    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
