<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:id="@+id/background_view">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="280dp"
            android:id="@+id/image_poster"
            android:contentDescription="@string/poster_image"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rating_label"
            android:text="@string/rating_label"
            style="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rating"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorSecondaryText"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_rating_label"
            tools:text="3.4"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date_label"
            android:text="@string/release_date"
            style="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            app:layout_constraintLeft_toLeftOf="@id/tv_rating"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv_date_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_date_label"
            tools:text="12 March 1994"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@id/image_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="original title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_overview"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="This is a great movie"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trailers_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:text="@string/trailers_label"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailers_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/trailers_label"
            android:orientation="horizontal"
            >

        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider2"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/trailers_recycler_view"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            android:text="@string/reviews_label"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/reviews_label"
            android:orientation="horizontal">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>


</ScrollView>